# hello_world

./: .env.local.template  .env.template  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  manage.py  pyproject.toml
apps/lessons/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/lessons/management/commands/: seed_data.py
apps/lessons/migrations/: 0001_initial.py
configs/: gunicorn.conf.py  nginx.conf  start.sh
core/: celery.py  urls.py
core/settings/: base.py  local.py
